--- a/project/project1.css
+++ b/project/project1.css
@@ -1,302 +1,476 @@
-*{
+* {
     margin: 0;
     padding: 0;
+
 }
-body{
+
+html {
+    font-family: "Roboto", sans-serif;
+    height: 100%;
+    font-size: medium;
+}
+
+body {
     background-color: #f2f4f8;
-   
-} 
-header{
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+li {
+    list-style: none;
+}
+
+header {
     display: flex;
-    justify-content:space-between;
+    justify-content: space-between;
     background-color: ghostwhite;
     font-family: "Roboto", sans-serif;
     font-size: 0.875rem;
     background-color: white;
+    height: 59px;
 }
-nav ul{
+
+nav ul {
     display: flex;
 }
-.first li{
-    border-left: 2px solid black;
-    padding:20px 15px;
+
+.first li {
+    border-left: 1px solid black;
+    padding: 1.25rem;
     list-style: none;
+    display:flex;
+    align-items: center;
 }
-nav a{
+
+.first li:hover{
+    border-left: 1px solid black;
+}
+.first img{
+    margin-right:0.2rem;
+}
+nav a {
     text-decoration: none;
     color: black;
 }
+
+.UST-logo img{
+    padding-left: 10px;
+    width: 143px;
+    height:20px; 
+}
 .UST-logo
 {
-    margin-top: 20px;
-    padding-left:10px;
-    justify-content:left;
+    display: flex;
+    align-items: center;
 }
 
-.profile {
-    padding: 17px;
+.Action:hover {
+    border-right: 2px solid black;
+    padding:1rem;
 }
-.stat-container
-{
-    display:grid;
+
+.profile{
+    padding-right: 10px;
+      display:flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 18rem;
+    
+}
+.login{
+    display: flex;
+    align-items: center;
+}
+.stat-container {
+    display: grid;
     column-gap: 1rem;
-    margin:1rem;
-    padding:0;
-    grid-template-columns: 1fr 1fr 1fr 1fr; 
-}
-.container-item
-{
-    background-color: white; 
-    padding: 0.5rem;
-   display: flex;
-   margin:0;
-   justify-content:space-between;
-}  
+    margin: 1rem;
 
-.container-itemlast
-{
-    background-color: white; 
-    padding: 0.5rem;
-    justify-content: space-between;
-}
-.container-last1
-{
-    display:flex;
-    justify-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.number-detail
-{
+.container-item {
+    background-color: white;
+    padding: 0.5rem;
+    display: flex;
+    margin: 0;
+    justify-content: space-between;
+    padding: 16px;
+}
+
+.container-item p {
+    color: #666;
+    font-size: 0.875rem;
+    font-family: "Roboto", sans-serif;
+}
+
+.container-itemlast {
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 16px;
+}
+
+.container-itemlast p {
+    color: #666;
+    font-size: 0.875rem;
+    font-family: "Roboto", sans-serif;
+}
+
+.container-last1 {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0;
+}
+
+.number-detail {
     font-weight: bold;
     font-size: 25px;
     color: #2f3749;
 }
-.circle-1
-{
-    display:inline-block;
+
+.circle-1 {
+    display: inline-block;
     height: 10px;
-    width:10px;
+    width: 10px;
     background-color: green;
     border-radius: 50%;
 
 }
-.circle-2
-{
-    display:inline-block;
+
+.circle-2 {
+    display: inline-block;
     height: 10px;
-    width:10px;
+    width: 10px;
     background-color: red;
     border-radius: 50%;
-    
+
 }
-.circle-3
-{
-    display:inline-block;
+
+.circle-3 {
+    display: inline-block;
     height: 10px;
-    width:10px;
+    width: 10px;
     background-color: yellow;
     border-radius: 50%;
 }
-.circle-4
-{
-    display:inline-block;
+
+.circle-4 {
+    display: inline-block;
     height: 10px;
-    width:10px;
+    width: 10px;
     background-color: black;
     border-radius: 50%;
-    
+
 }
-.main-position{
+
+.cogs {
+    color: #666;
+    font-size: 0.875rem;
+    font-family: "Roboto", sans-serif;
+}
+
+.main-position {
+    display: flex;
+    color: #666;
+    font-size: 0.875rem;
+    font-family: "Roboto", sans-serif;
+}
+
+.main-position p {
+    padding-right: 6px;
+    margin: 0;
+}
+
+.third-container {
+    width: 60%;
+    background-color: white;
+    padding-bottom: 10px;
+    justify-content: space-evenly;
+    margin-top: 15px;
+    margin-left: 15px;
+    margin-bottom: 1px;
+
+}
+
+.second-nav {
+    display: flex;
+    justify-content: space-between;
+}
+
+.Inbound {
     display: flex;
 }
-.main-position p{
-    padding-right: 6px;
-}
-.second
-{
-    width:60%;
-   background-color: white;
-padding-bottom: 10px;
-justify-content: space-evenly;
-margin-top:15px;
-margin-left: 15px;
 
+
+.second-nav li {
+    padding: 15px;
+    font-size: 0.9rem;
 }
 
-.second-2 ul li 
-{
-    display:flex;
-    list-style:none;
-    
+.view a {
+    color: #006e74;
+    font-family: "Roboto", sans-serif;
+    font-weight: bolder;
+    font-size: 0.7rem;
 }
-.second-2 a
-{
-    color:blue;
-     padding:10px;
-}
-.second-nav li
-{
-    display:flex;
-    list-style: none;
-    border:0.02 solid #f2f4f8;
+
+.third-nav li {
     background-color: #f2f4f8;
-    padding:0.5rem;
-    margin:5px;
-    
+    padding: 10px;
+    margin: 5px;
 }
-.view
-{
-    padding-left:15.9rem;
+
+.third-nav a {
+    font-family: "Roboto", sans-serif;
+    color: #2F3749;
+    font-size: 14px;
 }
-.second-nav a{
-    background-color: #f2f4f8;
+
+.third-nav ul {
+    background-color: white;
+    display: flex;
 }
-.num
-{
+
+.num {
     font-weight: bold;
     background-color: #f2f4f8;
-    padding-left:5px;
+    padding-left: 5px;
 }
-.inp
-{
-    width:80%;
-    padding:5px;
-    /* margin-top:30px; */
-} 
-aside{
-    position: absolute;
-    width:35%;
-    height:68%;
-    margin-left:63%;
-    text-align: center;
-    color:black;
-    background-color:aliceblue;
-}
-.aside table{
-    /* border:3px solid black; */
-    background-color: white;
-    width:33.5rem;
-    padding-bottom: 4px;
+
+.form {
+    display: flex;
+    margin: 5px;
     
 }
-.aside th{
-    text-align: start;
-    padding:2px;
-    background-color: white;
+
+.search-box {
+    width: 95%;
+    background-color: #f8f9fb;
+    border: none;
 }
-.aside p{
+
+.search {
+    background-color: #f8f9fb;
+    border: none;
+    margin-right: 4px;
+
+}
+
+aside {
+    position: absolute;
+    width: 36.6%;
+    height: 75.3%;
+    margin-left: 61.3%;
+    text-align: center;
+    color: black;
+    background-color: #f8f9fb;
+}
+
+.aside h1 {
+    padding-top: 40px;
+
+}
+
+.aside p {
     padding: 28px;
 }
-.righ
-{
-    padding-left: 26rem;
+
+.aside-header {
+    display: flex;
+    padding: 5px;
+    justify-content: space-between;
     background-color: white;
 }
-.main-content
-{
+
+.Risk {
+    padding: 3px;
+    font-weight: bolder;
+}
+
+.righ {
+    margin: 0;
+    padding-left: 33rem;
+    width: fit-content;
+    background-color: white;
+}
+
+.main-content {
     display: grid;
-    /* margin:1rem; */
-    flex-wrap:wrap;
+    column-gap: 2px;
     grid-template-columns: 1fr 1fr;
-    width:61%;
 }
-.content
-{
-    height: 50vh;
-    margin:5px;   
+
+.content {
+    height: 52vh;
+    margin: 0px;
+    padding: 10px;
+    display:wrap;
+    flex-wrap: wrap;
     background-color: white;
-width:27.8rem;
-
-justify-content: space-between;
-}
-.one{
-    display:flex;
-    justify-content:space-between;
-    margin:0;
-    padding:8px;
-    margin-bottom: 10px;
-
-    
-}
-.left-num
-{
-    font-size:22px;
-    font-weight: bold;
+    width: 27rem;
+    margin: 5px;
 }
 
-.right
-{
-display: flex;
+.one {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 8px;
 }
-.right img{
+
+.left-num {
+    font-size: 18px;
+}
+
+.left p {
+    font-size: 12px;
+    margin: 1px;
+    color: #7C8089;
+}
+
+.right {
+    display: flex;
+}
+
+.right img {
     object-fit: contain;
-    padding-right:5px;
+    padding-right: 5px;
 }
-.right p{
-    background-color: #f2f4f8;
-    /* padding:3px; */
-    padding-bottom: 0px;
-padding: 9px;
-font-weight: bold;
-color:lightblue;
+
+.left-content {
+    display: flex;
 }
-.two
-{
-    display:flex;
-    justify-content:space-between;
-    margin:0;
-    padding:8px;
-    background-color: #f2f4f8;
-    margin:10px;
+
+.right-content {
+    display: flex;
 }
-.orgin
-{
-    font-size: small;
+
+.top-arrow {
+    margin-top: 9px;
+}
+
+.down-arrow {
+    margin-top: 9px;
+}
+
+.On-time {
     background-color: #f2f4f8;
+    width: fit-content;
+    font-weight: bold;
+    color: lightblue;
+}
+
+.two {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    padding: 8px;
+    background-color: #f2f4f8;
+    margin: 10px;
+}
+
+.orgin {
+    font-size: 11px;
+    color: #7C8089;
 
 }
-.sikkim
-{
+
+.sikkim {
     font-size: 1rem;
     background-color: #f2f4f8;
     font-weight: bold;
 }
-.scroll
-{
-    height:22rem;
-    width:60.5%;
-    margin:10px ;
-    margin-top:3px;
-    display: grid;
-    overflow:scroll;
-    grid-template-rows: 1fr 1fr;
+
+.scroll {
+    height: 24rem;
+    width: 60.5%;
+    margin-left: 10px;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: absolute;
 }
 .scroll-down
 {
-    display:grid;
-    height:40rem;
-    gap:5px;
-    /* grid-template-rows: 1fr 1fr; */
+    width:fit-content;
 }
-.item
-{
+.item {
     background-color: red;
 }
-.third
-{
-    display:flex;
-    justify-content: space-between;
-    margin:10px;
-    margin-top:35px;
-    padding:10px;
-    font-size:14px;
-    /* background-color:#f2f4f8 ; */
-}
-.four
-{
+
+.third {
     display: flex;
-    margin-top:35px;
-    padding:20px;
+    justify-content: space-between;
+    padding: 35px;
+    font-size: 16px;
+}
+
+.mini-style {
+    color: #7C8089;
+    font-size: 13px;
+}
+
+.mini-style2 {
+    font-size: 15px;
+}
+
+.waiting {
+    display: flex;
+    color: red;
+    font-size: 13px;
+    justify-content: space-between;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.four {
+    display: flex;
+    margin-top: 35px;
+    padding: 20px;
     justify-content: space-between;
 }
 
+.first a:hover {
+    color: #006E74;
+
+}
+
+.first li:hover {
+    border-bottom: 2px solid black;
+}
+
+a {
+    text-decoration: none;
+}
+
+.OnTime p {
+    font-size: 13px;
+    background-color: #f2f4f8;
+    color: blue;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+.third-nav li:hover {
+    background-color: #0097AB;
+    color: black;
+}
+
+::-webkit-scrollbar {
+    width: 0.15rem;
+}
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
