--- a/project/project1.css
+++ b/project/project1.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-
+   
 }
 
 html {
@@ -9,9 +9,45 @@ html {
     height: 100%;
     font-size: medium;
 }
+.body-container
+{
+    width:100%;
+    height:76%;
+    display: flex;
+    flex-wrap: wrap;
+}
+.body-left
+{
+    flex-basis: 60%;
+    /* display: flex; */
+    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
 
-body {
+}
+.body-right
+{
+    flex-basis: 40%;
+    /* display: flex; */
+    flex-wrap: wrap;
+   
+}
+.body-top {
+    
+    height:27%;
+    /* display: flex; */
+    flex-wrap: wrap;
+}
+.body-bottom
+{
+    height:63%;
+    /* display: flex; */
+    flex-wrap: wrap;
+}
+body{
     background-color: #f2f4f8;
+    font-family: "Roboto", sans-serif;
+    height: 100%;
+    font-size: medium;
 }
 
 a {
@@ -30,7 +66,8 @@ header {
     font-family: "Roboto", sans-serif;
     font-size: 0.875rem;
     background-color: white;
-    height: 59px;
+    height: 3.75rem;
+    width:100%;                                                                                                
 }
 
 nav ul {
@@ -39,56 +76,62 @@ nav ul {
 
 .first li {
     border-left: 1px solid black;
-    padding: 1.25rem;
+    padding: 1.23rem;
     list-style: none;
-    display:flex;
+    display: flex;
     align-items: center;
 }
 
-.first li:hover{
+.nav li:hover {
     border-left: 1px solid black;
 }
-.first img{
-    margin-right:0.2rem;
+
+.first img {
+    margin-right: 0.2rem;
 }
+
 nav a {
     text-decoration: none;
     color: black;
 }
 
-.UST-logo img{
+.UST-logo img {
     padding-left: 10px;
     width: 143px;
-    height:20px; 
+    height: 20px;
 }
-.UST-logo
-{
+
+.UST-logo {
     display: flex;
     align-items: center;
 }
 
 .Action:hover {
     border-right: 2px solid black;
-    padding:1rem;
+    padding: 1rem;
 }
 
-.profile{
+.profile {
     padding-right: 10px;
-      display:flex;
-      align-items: center;
-      justify-content: space-between;
-      width: 18rem;
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 18rem;
+
 }
-.login{
+
+.login {
     display: flex;
     align-items: center;
 }
+
 .stat-container {
     display: grid;
+    justify-content: space-between;
     column-gap: 1rem;
     margin: 1rem;
-
+    height:5rem;
+    flex-wrap: wrap;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
@@ -186,23 +229,23 @@ nav a {
 }
 
 .third-container {
-    width: 60%;
     background-color: white;
     padding-bottom: 10px;
     justify-content: space-evenly;
-    margin-top: 15px;
     margin-left: 15px;
     margin-bottom: 1px;
-
+    flex-wrap: wrap;
 }
 
 .second-nav {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .Inbound {
     display: flex;
+    flex-wrap: wrap;
 }
 
 
@@ -222,6 +265,7 @@ nav a {
     background-color: #f2f4f8;
     padding: 10px;
     margin: 5px;
+
 }
 
 .third-nav a {
@@ -233,6 +277,7 @@ nav a {
 .third-nav ul {
     background-color: white;
     display: flex;
+    flex-wrap: wrap;
 }
 
 .num {
@@ -244,7 +289,7 @@ nav a {
 .form {
     display: flex;
     margin: 5px;
-    
+
 }
 
 .search-box {
@@ -257,29 +302,30 @@ nav a {
     background-color: #f8f9fb;
     border: none;
     margin-right: 4px;
-
 }
 
-aside {
+.asider {
     position: absolute;
-    width: 36.6%;
-    height: 75.3%;
-    margin-left: 61.3%;
+    width: 38.3%;
+    height: 74%;
+    margin:0 10px;
+    /* margin-left: 61.3%; */
     text-align: center;
     color: black;
+    flex-wrap: wrap;
+    
     background-color: #f8f9fb;
 }
 
-.aside h1 {
+.asider h1 {
     padding-top: 40px;
-
 }
 
-.aside p {
+.asider p {
     padding: 28px;
 }
 
-.aside-header {
+.asider-header {
     display: flex;
     padding: 5px;
     justify-content: space-between;
@@ -300,30 +346,28 @@ aside {
 
 .main-content {
     display: grid;
-    column-gap: 2px;
+    flex-wrap: wrap;
     grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    margin: 5px;
 }
 
 .content {
-    height: 52vh;
-    margin: 0px;
-    padding: 10px;
-    display:wrap;
-    flex-wrap: wrap;
+    padding: 0.6rem;
+    display: grid;
     background-color: white;
-    width: 27rem;
-    margin: 5px;
+
 }
 
 .one {
     display: flex;
     justify-content: space-between;
     margin: 0;
-    padding: 8px;
+    padding: 0.5rem;
 }
 
 .left-num {
-    font-size: 18px;
+    font-size: 1rem;
 }
 
 .left p {
@@ -386,18 +430,23 @@ aside {
 }
 
 .scroll {
-    height: 24rem;
-    width: 60.5%;
+    height: 52%;
+    width: 59%;
+    margin-top: 15px;
     margin-left: 10px;
+    display: flex;
     flex-wrap: wrap;
     overflow-y: scroll;
     overflow-x: hidden;
     position: absolute;
 }
-.scroll-down
-{
-    width:fit-content;
+
+.scroll-down {
+    display: grid;
+    width: 100%;
+
 }
+
 .item {
     background-color: red;
 }
@@ -474,3 +523,4 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
