--- a/project/project1.css
+++ b/project/project1.css
@@ -1,49 +1,52 @@
 * {
     margin: 0;
     padding: 0;
-   
+
 }
 
+/* #moblie_view
+{
+    display: none;
+} */
 html {
     font-family: "Roboto", sans-serif;
     height: 100%;
     font-size: medium;
 }
-.body-container
-{
-    width:100%;
-    height:76%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.body-left
-{
-    flex-basis: 60%;
-    /* display: flex; */
-    flex-wrap: wrap;
-    /* flex-wrap: wrap; */
 
+.body-container {
+    width: 100%;
+    height: 76%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
-.body-right
-{
+
+.body-left {
+    display: flex;
+    flex-direction: column;
+    width: 60%;
+}
+
+.body-right {
     flex-basis: 40%;
-    /* display: flex; */
-    flex-wrap: wrap;
-   
+    width: 39%;
 }
+
 .body-top {
-    
-    height:27%;
-    /* display: flex; */
-    flex-wrap: wrap;
+
+    /* height:20%; */
+    /* width:60%; */
+    /* flex-wrap: wrap; */
 }
-.body-bottom
-{
-    height:63%;
-    /* display: flex; */
-    flex-wrap: wrap;
+
+.body-bottom {
+
+    display: flex;
 }
-body{
+
+body {
     background-color: #f2f4f8;
     font-family: "Roboto", sans-serif;
     height: 100%;
@@ -64,22 +67,32 @@ header {
     justify-content: space-between;
     background-color: ghostwhite;
     font-family: "Roboto", sans-serif;
+    font-style: normal;
+    color: black;
+    font-stretch: normal;
     font-size: 0.875rem;
     background-color: white;
-    height: 3.75rem;
-    width:100%;                                                                                                
+    height: 4rem;
+    width: 100%;
 }
 
 nav ul {
     display: flex;
+
 }
 
 .first li {
-    border-left: 1px solid black;
-    padding: 1.23rem;
+    border-left: 1px solid #f2f4f8;
+    border-right: 1px solid #f2f4f8;
+    padding: 1.4rem;
     list-style: none;
     display: flex;
+    justify-content: center;
     align-items: center;
+    font-stretch: normal;
+    font-size: 14px;
+    gap: 8px;
+
 }
 
 .nav li:hover {
@@ -88,6 +101,7 @@ nav ul {
 
 .first img {
     margin-right: 0.2rem;
+    object-fit: contain;
 }
 
 nav a {
@@ -96,14 +110,15 @@ nav a {
 }
 
 .UST-logo img {
-    padding-left: 10px;
     width: 143px;
     height: 20px;
 }
 
 .UST-logo {
-    display: flex;
+    padding-left: 1rem;
     align-items: center;
+    display: flex;
+    width: 15%;
 }
 
 .Action:hover {
@@ -117,7 +132,13 @@ nav a {
     align-items: center;
     justify-content: space-between;
     width: 18rem;
+    color: #006e74;
+    font-stretch: normal;
 
+}
+
+.login i {
+    padding: 8px;
 }
 
 .login {
@@ -129,8 +150,7 @@ nav a {
     display: grid;
     justify-content: space-between;
     column-gap: 1rem;
-    margin: 1rem;
-    height:5rem;
+    padding: 1rem;
     flex-wrap: wrap;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
@@ -139,20 +159,45 @@ nav a {
     background-color: white;
     padding: 0.5rem;
     display: flex;
+    flex-wrap: wrap;
     margin: 0;
     justify-content: space-between;
     padding: 16px;
+    font-size: 0.875rem;
+    color: #666;
 }
 
 .container-item p {
     color: #666;
-    font-size: 0.875rem;
+    font-size: 0.9rem;
     font-family: "Roboto", sans-serif;
+}
+
+.i {
+    display: flex;
+
+    object-fit: contain;
+}
+
+.i img {
+    padding-left: 0.3rem;
+    object-fit: contain;
+}
+
+.container-item p img {
+    object-fit: contain;
+}
+
+.container-item img {
+    padding-left: 3px;
+
 }
 
 .container-itemlast {
     background-color: white;
     display: flex;
+    flex-wrap: wrap;
+    font-size: 0.875rem;
     justify-content: space-between;
     padding: 16px;
 }
@@ -171,8 +216,9 @@ nav a {
 
 .number-detail {
     font-weight: bold;
-    font-size: 25px;
     color: #2f3749;
+    font-size: 30px;
+    font-weight: 600;
 }
 
 .circle-1 {
@@ -231,9 +277,10 @@ nav a {
 .third-container {
     background-color: white;
     padding-bottom: 10px;
+    /* margin:10px; */
     justify-content: space-evenly;
     margin-left: 15px;
-    margin-bottom: 1px;
+    width: 98%;
     flex-wrap: wrap;
 }
 
@@ -241,43 +288,73 @@ nav a {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
+}
+
+.Inbound a:hover {
+    border-bottom: 0.01rem solid #0097AB;
+    color: #0097AB;
+}
+
+.Inbound a {
+    border-bottom: 0.01rem solid white;
+
 }
 
 .Inbound {
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
-
 .second-nav li {
     padding: 15px;
-    font-size: 0.9rem;
+    margin-left: 8px;
+    font-size: 0.875rem;
 }
 
-.view a {
-    color: #006e74;
+.arrow {
+    object-fit: contain;
+}
+
+.view-right {
+    display: flex;
     font-family: "Roboto", sans-serif;
-    font-weight: bolder;
-    font-size: 0.7rem;
+    padding-right: 15px;
+    font-size: 0.825rem;
+    align-items: center;
+
+}
+
+.view-right a {
+    color: #006e74;
+    font-weight: bold;
 }
 
 .third-nav li {
-    background-color: #f2f4f8;
-    padding: 10px;
-    margin: 5px;
-
+    margin: 10px;
+    align-items: center;
+    margin-right: 8px;
+    margin-left: 8px;
 }
 
 .third-nav a {
     font-family: "Roboto", sans-serif;
-    color: #2F3749;
+    padding: 10px;
+    background-color: #f2f4f8;
     font-size: 14px;
 }
 
 .third-nav ul {
     background-color: white;
     display: flex;
+    color: #2F3749;
+    align-items: center;
     flex-wrap: wrap;
+}
+
+.third-nav {
+    margin-top: 10px;
 }
 
 .num {
@@ -288,7 +365,7 @@ nav a {
 
 .form {
     display: flex;
-    margin: 5px;
+    margin-left: 10px;
 
 }
 
@@ -301,19 +378,14 @@ nav a {
 .search {
     background-color: #f8f9fb;
     border: none;
-    margin-right: 4px;
+    padding: 3px;
+    margin-right: 0.3rem;
 }
 
 .asider {
-    position: absolute;
-    width: 38.3%;
-    height: 74%;
-    margin:0 10px;
-    /* margin-left: 61.3%; */
+    margin: 0 12px;
     text-align: center;
     color: black;
-    flex-wrap: wrap;
-    
     background-color: #f8f9fb;
 }
 
@@ -322,7 +394,8 @@ nav a {
 }
 
 .asider p {
-    padding: 28px;
+    padding: 3.7rem;
+
 }
 
 .asider-header {
@@ -349,14 +422,13 @@ nav a {
     flex-wrap: wrap;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin: 5px;
+    margin-left: 5px;
 }
 
 .content {
     padding: 0.6rem;
     display: grid;
     background-color: white;
-
 }
 
 .one {
@@ -432,7 +504,6 @@ nav a {
 .scroll {
     height: 52%;
     width: 59%;
-    margin-top: 15px;
     margin-left: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -504,9 +575,15 @@ a {
     margin-top: 5px;
 }
 
-.third-nav li:hover {
-    background-color: #0097AB;
+.third-nav a:hover {
     color: black;
+
+
+}
+
+.third-nav a:focus {
+    background-color: #0097AB;
+    outline: none;
 }
 
 ::-webkit-scrollbar {
@@ -523,4 +600,179 @@ a {
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+}
+
+@media (max-width:700px) {
+    body {
+        background-color: #f2f4f8;
+        font-family: "Roboto", sans-serif;
+        width: auto;
+    }
+
+    header {
+        font-size: 0.875rem;
+        width: auto;
+
+    }
+
+    .first ul {
+        display: none;
+        /* flex-direction: column;
+        flex-wrap: wrap;
+        width:21%;
+        margin-left:23rem;        
+        border:2px solid red;
+        position: absolute;
+        background-color: black; */
+    }
+
+    .first li:hover {
+        background-color: #0097AB;
+
+    }
+
+    .first a:hover {
+        color: white;
+    }
+
+    .first li {
+        color: white;
+    }
+
+    .UST-logo img {
+        padding-left: 10px;
+        display: flex;
+        width: 100px;
+        height: 10px;
+    }
+
+    .stat-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        flex-wrap: wrap;
+    }
+
+    .container-item {
+        background-color: white;
+        display: flex;
+        margin: 0;
+    }
+
+    .container-itemlast {
+        background-color: white;
+        display: flex;
+        flex-direction: row;
+        padding: 16px;
+    }
+
+    .third-container {
+        background-color: white;
+        padding-bottom: 10px;
+        justify-content: space-evenly;
+        margin-left: 15px;
+        width: 98%;
+        flex-wrap: wrap;
+    }
+
+    .Inbound li {
+        width: auto;
+        flex-wrap: wrap;
+    }
+
+    .third-nav ul {
+        display: none;
+        margin-bottom: 40%;
+        flex-direction: row;
+        width: auto;
+        flex-wrap: wrap;
+        position: absolute;
+    }
+
+    .third-nav a {
+        color: black;
+    }
+
+    .main-content {
+        display: flex;
+        width: auto;
+    }
+
+    .body-bottom {
+        width: auto;
+    }
+
+    .scroll {
+        width: auto;
+
+    }
+
+    .content {
+        width: 100%;
+        flex-direction: column;
+        display: flex;
+        grid-template-columns: auto;
+    }
+
+    .scroll-down {
+
+        width: auto;
+        overflow-y: scroll;
+
+    }
+
+    .asider {
+
+        width: auto;
+        font-size: small;
+        margin-left: 10px;
+        position: absolute;
+        margin-top: 30%;
+        color: black;
+        background-color: #f8f9fb;
+    }
+
+    .asider h1 {
+        padding-top: 20px;
+    }
+
+    .asider p {
+        padding: 3rem;
+    }
+
+    .asider-header {
+        padding: 5px;
+        background-color: white;
+    }
+
+    .Risk {
+        padding: 3px;
+        font-weight: bolder;
+    }
+
+    .body-container {
+        width: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .body-top {
+        width: auto;
+    }
+
+    .body-bottom {
+        display: flex;
+        margin-top: 10px;
+        margin-right: 10px;
+        width: auto;
+    }
+
+    .body-left {
+        width: auto;
+    }
+
+    .body-right {
+        width: auto;
+    }
+
 }
